<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    tools:context=".ui.signin.SignInView">

    <LinearLayout
        android:id="@+id/parentLinearLayoutVertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeBackTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/welcome_back"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/appImageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/grocery_helper_app_icon_hdpi"
            android:contentDescription="@string/an_image_of_the_application_icon" />

        <LinearLayout
            android:id="@+id/childLinearLayoutVertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/emailInputTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/required_email_tap_to_type"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                android:textStyle="bold"
                android:autofillHints="Type your email" />

            <TextView
                android:id="@+id/passwordInputTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/passwordInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/required_password_tap_to_type"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textStyle="bold"
                android:autofillHints="Type your password" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/sign_in"
                style="?android:attr/buttonBarButtonStyle"/>

            <LinearLayout
                android:id="@+id/linearLayoutClearButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clearEmailFieldButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_email"
                    style="?android:attr/buttonBarButtonStyle" />

                <View
                    android:id="@+id/clearButtonsSpacer"
                    android:layout_width="30dp"
                    android:layout_height="1dp" /> <!-- Spacer View -->

                <Button
                    android:id="@+id/clearPasswordFieldButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_password"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>