<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addgrocerystore.AddGroceryStoreFragment">

    <LinearLayout
        android:id="@+id/addStoreLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/addStorePageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no"
            android:text="@string/add_store"
            android:textColor="@color/text_primary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/voiceInputButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/voice_input"
                android:textColor="@color/text_primary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/storeNameLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:importantForAutofill="no"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addStoreNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:text="@string/add_new_store"
                android:textAlignment="center"
                android:textColor="@color/text_primary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addStoreNameRules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:text="@string/must_contain_at_least_1_letter"
                android:textAlignment="center"
                android:textColor="@color/text_primary"
                android:textStyle="bold" />

            <com.jacobdamiangraham.groceryhelper.utils.CustomEditText
                android:id="@+id/addStoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/required_tap_to_type"
                android:importantForAutofill="no"
                android:inputType="text|textAutoComplete|textAutoCorrect"
                android:textAlignment="viewStart"
                android:textColor="@color/text_primary"
                app:TtsPrompt="What is the store name?" />

            <Button
                android:id="@+id/addNewGroceryStoreButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_store" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>